[package]
name = "orbit-product"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "orbit_product"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
orbit-addresses = {git = "https://github.com/OrbitEng/addresses"}
market-accounts =  {git = "https://github.com/OrbitEng/accounts", features=["cpi"]}